--- a/src/index.css
+++ b/src/index.css
@@ -101,8 +101,22 @@ code {
   width: 5vmin;
 } */
 
-.reset {
+.controls {
   text-align: center;
-  font-size: medium;
+  font-size: 2.5vmin;
   margin: 0.1rem;
+  height: 7vmin;
+}
+
+.pause-screen {
+  position: absolute;
+  color: violet;
+  font-size: 12vmin;
+  text-align: center;
+  text-shadow: 1px 1px 0px black;
+  /* margin: auto; */
+  /* margin-top: 50%; */
+  top: 40%;
+  width: 100%;
+  height: 60%;
 }
