--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,9 @@ code {
 }
 
 .playfield {
-  /* box-sizing: border-box; */
   position: relative;
   font-size: 0%;
   margin: auto;
-  /* margin-top: 4vmin; */
-  /* margin-bottom: 5vmin; */
   height: 90vmin;
   width: 50vmin;
   background-color: skyblue;
@@ -35,11 +32,6 @@ code {
   display: inline-block;
   height: 5vmin;
   width: 5vmin;
-  /* background-color: skyblue; */
-  /* border: solid 1px #81c5e0; */
-  /* border: solid 1px #78b6cf; */
-  /* border-left: solid 1px #78b6cf; */
-  /* border-right: solid 1px #78b6cf; */
 }
 
 .filled-tile {
@@ -50,9 +42,6 @@ code {
   width: 5vmin;
   background-color: black;
   border-radius: 10%;
-  /* border: solid 1px #172327; */
-  /* border: solid thick black; */
-  /* margin: solid thin black; */
 }
 
 .block {
@@ -66,7 +55,6 @@ code {
 
 .i {
   background-color: #98fb98;
-  /* background-color: #ffd700; */
 }
 
 .j {
@@ -74,7 +62,6 @@ code {
 }
 
 .l {
-  /* background-color: #fa8072; */
   background-color: #ff00ff;
 }
 
@@ -94,13 +81,6 @@ code {
   background-color: #0fffaf;
 }
 
-/* .blank-tile {
-  box-sizing: border-box;
-  display: inline-block;
-  height: 5vmin;
-  width: 5vmin;
-} */
-
 .controls {
   text-align: center;
   font-size: 2.5vmin;
@@ -114,9 +94,30 @@ code {
   font-size: 12vmin;
   text-align: center;
   text-shadow: 1px 1px 0px black;
-  /* margin: auto; */
-  /* margin-top: 50%; */
   top: 40%;
   width: 100%;
   height: 60%;
+}
+
+.game-over {
+  position: absolute;
+  z-index: 10;
+  color: violet;
+  text-align: center;
+  text-shadow: 1px 1px 0px black;
+  top: 20%;
+  width: 50vmin;
+  height: 50vmin;
+  background-color: #0000008a;
+  border-radius: 12.5%;
+}
+
+.game-over h3 {
+  margin: 0;
+  font-size: 12vmin;
+  font-weight: normal;
+}
+
+.game-over span {
+  font-size: 5vmin;
 }
