--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,50 @@ code {
   margin-bottom: 2vh;
   width: 25vmin;
   /* min-width: 100px; */
-  background-color: red;
+  background-color: violet;
+}
+
+#move-left,
+#move-right,
+#soft-drop,
+#hard-drop {
+  position: fixed;
+  height: 12vmin;
+  width: 12vmin;
+  bottom: 44vmin;
+  left: 100px;
+  border-top-left-radius: 10%;
+  border-bottom-left-radius: 10%;
+  border-top-right-radius: 4%;
+  border-bottom-right-radius: 4%;
+}
+
+#move-left:before,
+#move-right:before,
+#soft-drop:before,
+#hard-drop:before {
+  content: "";
+  position: absolute;
+  left: 98%;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-top: 6vmin solid transparent;
+  border-left: 6vmin solid violet;
+  border-bottom: 6vmin solid transparent;
+  /* filter: drop-shadow(); */
+}
+
+#hard-drop {
+  transform: rotateZ(90deg) translate(-150%, -150%);
+}
+
+#move-right {
+  transform: rotateZ(180deg) translate(-300%, 0);
+}
+
+#soft-drop {
+  transform: rotateZ(-90deg) translate(-150%, 150%);
 }
 
 .next-block {
