created TouchControls.js component, renamed controls.css to touch-controls.css, added param and payload to actions moveLeft and moveRight

--- a/src/css/touch-controls.css
+++ b/src/css/touch-controls.css
@@ -1,8 +1,8 @@
-.btns {
+.touch-controls {
   position: absolute;
 }
 
-.btns > div {
+.touch-controls > div {
   background-color: violet;
   filter: drop-shadow(0 0 5px black);
 }
