--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,16 +15,12 @@ body {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 } */
 
-/* .btn div {
-  display: inline;
-} */
-
 .playfield {
   position: relative;
   font-size: 0%;
   margin: auto;
-  height: 90vh;
-  width: 50vh;
+  height: 73.8vh;
+  width: 41vh;
   background-color: skyblue;
   border: 1vh solid violet;
 }
@@ -33,8 +29,8 @@ body {
   box-sizing: border-box;
   position: relative;
   display: inline-block;
-  height: 5vh;
-  width: 5vh;
+  height: 4.1vh;
+  width: 4.1vh;
 }
 
 .key-bindings {
@@ -52,20 +48,20 @@ body {
   text-align: center;
   text-shadow: 1px 1px 0px black;
   top: 20%;
-  width: 50vh;
-  height: 50vh;
+  width: 41vh;
+  height: 41vh;
   background-color: #0000008a;
   border-radius: 12.5%;
 }
 
 .pause-screen h3 {
   margin: 0;
-  font-size: 12vh;
+  font-size: 9.8vh;
   font-weight: normal;
 }
 
 .pause-screen span {
-  font-size: 5vh;
+  font-size: 4.1vh;
 }
 
 .game-over {
@@ -75,26 +71,28 @@ body {
   text-align: center;
   text-shadow: 1px 1px 0px black;
   top: 20%;
-  width: 50vh;
-  height: 50vh;
+  width: 41vh;
+  height: 41vh;
   background-color: #0000008a;
   border-radius: 12.5%;
 }
 
 .game-over h3 {
   margin: 0;
-  font-size: 12vh;
+  font-size: 9.8vh;
   font-weight: normal;
 }
 
 .game-over span {
-  font-size: 5vh;
+  font-size: 4.1vh;
 }
 
 .side-panel {
   position: absolute;
   top: -1vh;
   left: 50.17vh;
+  left: 41.17vh;
+  height: 73.8vh;
   width: 23vh;
   display: block;
   background-color: skyblue;
@@ -115,16 +113,16 @@ body {
 
 .side-panel > div > .num {
   margin: 0;
-  font-size: 8vh;
+  font-size: 7.5vh;
 }
 
 .side-panel .score .num {
-  font-size: 6vh;
+  font-size: 5.5vh;
 }
 
 .score,
 .next-block {
-  display: none;
+  /* display: none; */
 }
 
 @media (orientation: portrait) {
@@ -174,6 +172,8 @@ body {
   .side-panel {
     top: -0.5vh;
     left: 25.1vh;
+    height: 45vh;
+
     width: 11.5vh;
     border: 0.5vh solid violet;
   }
